compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_generic_function_type_to_concrete_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub fn identity(a) -> a
+ pub fn identity(Int) -> Int
