compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_label_of_function_parameter_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub fn add(first: Int, second: Int) -> Int
+ pub fn add(this: Int, to: Int) -> Int
