compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_multiple_concrete_constant_types_to_separate_generics_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
- pub const lists: #(List(Int), List(Float))
+ pub const lists: #(List(a), List(b))
