compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_multiple_concrete_function_types_to_separate_generics_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
- pub fn pair(Int, Float) -> #(Int, Float)
+ pub fn pair(a, b) -> #(a, b)
