compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_same_concrete_constant_type_to_the_same_generic_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
- pub const lists: #(List(Int), List(Int))
+ pub const lists: #(List(a), List(a))
