compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_same_concrete_function_type_to_the_same_generic_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
- pub fn pair(Int, Int) -> #(Int, Int)
+ pub fn pair(a, a) -> #(a, a)
