compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_type_alias_generics_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub type MyResult = Result(Int, String)
+ pub type MyResult = Result(String, Int)
