compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_type_alias_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub type Number = Int
+ pub type Number = Float
