compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_type_alias_parameter_order_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub type OkOrError(a, b) = Result(a, b)
+ pub type OkOrError(a, b) = Result(b, a)
