compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_type_alias_to_custom_type_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub type MyBool = Bool
+ pub type MyBool {
+   True
+   False
+ }
