compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_type_of_constructor_field_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub type Wibble {
-   Wibble(Int, String)
- }
+ pub type Wibble {
+   Wibble(Float, String)
+ }
